--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "php/gamerhouse",
-    "autoload": {
-        "psr-4": {
-            "Php\\Gamerhouse\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Thi2erry8",
-            "email": "jonathanaugustin056@gmail.com"
-        }
-    ],
-    "require-dev": {
-        "phpunit/phpunit": "^11.5"
+  "name": "php/gamerhouse",
+  "autoload": {
+    "psr-4": {
+      "GamerHouse\\": "src/GamerHouse"
     }
+  },
+  "authors": [
+    {
+      "name": "Thi2erry8",
+      "email": "jonathanaugustin056@gmail.com"
+    }
+  ],
+  "require-dev": {
+    "phpunit/phpunit": "^11.5"
+  }
 }
