--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "^11.5"
+    "phpunit/phpunit": "^11.5",
+    "squizlabs/php_codesniffer": "^4.0"
+  },
+  "require": {
+    "guzzlehttp/guzzle": "^7.10"
   }
 }
