--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
-    "name": "gamerhouse/ecommerce",
-    "autoload": {
-        "psr-4": {
-            "Gamerhouse\\Ecommerce\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Thi2erry8",
-            "email": "jonathanaugustin056@gmail.com"
-        }
-    ],
-    "require": {
-        "nyholm/psr7": "^1.8",
-        "nyholm/psr7-server": "^1.1",
-        "nikic/fast-route": "^1.3",
-        "php-di/php-di": "^7.1",
-        "vlucas/phpdotenv": "^5.6",
-        "twig/twig": "^3.22"
+  "name": "gamerhouse/ecommerce",
+  "autoload": {
+    "psr-4": {
+      "GamerHouse\\": "src/"
     }
+  },
+  "authors": [
+    {
+      "name": "Thi2erry8",
+      "email": "jonathanaugustin056@gmail.com"
+    }
+  ],
+  "require": {
+    "nyholm/psr7": "^1.8",
+    "nyholm/psr7-server": "^1.1",
+    "nikic/fast-route": "^1.3",
+    "php-di/php-di": "^7.1",
+    "vlucas/phpdotenv": "^5.6",
+    "twig/twig": "^3.22"
+  }
 }
